# thir

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  conv  doc.md  generate_undef.h  main.cpp  model.cpp  speedtest.cpp  structures.cpp  structures.h  test_binary_big_endian.h  test_binary_little_endian.h  test_ext_core.cpp  test_ext_qt_.h  test_parallel_definitions.h  tests.h  tst_podtypes.h  tst_podtypes_struct.expanded.h  tst_podtypes_struct.h
.github/workflows/: ccpp.yml
protocol/: classes.h  classes.imp.h  generate.h  generate_class_implementation.h  generate_class_postfix.h  generate_class_prefix.h  generate_undef.h
protocol/fields/: Any.h  AnyOf.h  Last.h  Plain.h  Vector.h  VectorOfAny.h  VectorOfAnyOf.h  Void.h  all.h  base.h
thir/: classes.h  classes.hpp  classes.imp.h  classes.imp.hpp  conv  extensions.hpp  generate.h  generate.hpp  generate_namespace_include.h  undef.h  undef.hpp
thir/extensions/Qt/: String_Field.hpp  String_Setter.hpp  Vector_Field.hpp  Vector_Include.hpp
thir/fields/: Any.h  Any.hpp  AnyOf.h  AnyOf.hpp  Plain.h  Plain.hpp  String.h  String.hpp  Vector.h  Vector.hpp  VectorOfAny.h  VectorOfAny.hpp  VectorOfAnyOf.h  VectorOfAnyOf.hpp  Void.h  Void.hpp  all.h  all.hpp  base.h  base.hpp
